fix: adapt to dark mode

--- a/include/style/article.styl
+++ b/include/style/article.styl
@@ -110,16 +110,6 @@ article
         .article-tags
             display: flex
             flex-wrap: wrap
-        
-    .title a
-        background-image: linear-gradient(transparent calc(100% - 1px), $primary 1px)
-        background-repeat: no-repeat
-        background-size: 0 100%
-        transition: all .2s ease-in-out
-    
-    .title:hover a
-        color: $primary
-        background-size: 100% 100%
 
 .rtl
     direction: rtl
