--- a/source/css/night.styl
+++ b/source/css/night.styl
@@ -43,8 +43,11 @@ night()
             color: #ffffff
             background-color: dark-primary-color
         &.is-active
-            color: #3273dc
-    .navbar,
+            color: dark-font-color
+    .navbar
+        backdrop-filter: none
+        -webkit-backdrop-filter: none
+        background-color: rgba(40,44,52,0.5)
     .card
         background-color: rgba(40,44,52,0.5)
         backdrop-filter: none
@@ -57,8 +60,7 @@ night()
     .footer
         backdrop-filter: none
         -webkit-backdrop-filter: none
-        &:before
-            background-color: rgba(40,44,52,0.5)
+        background-color: rgba(40,44,52,0.5)
 
     // input
     .input, .textarea
